test/libsolidity/syntaxTests/errors/indexed_error.sol
error E(uint indexed);
// ----
// ParserError 2314: (13-20): Expected ',' but got 'indexed'
